tests/invalid/is_left_requires_object_or_interface.wio
interface IMarker {
    fn Ping();
}

fn Entry(args: string[]) -> i32 {
    let value = 1;
    if (value is IMarker) {
        return 1;
    }

    return 0;
}
